# some_global_executor

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  NOTICE  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
scripts/: README.md  fmt  playwright-wasm-stress-test.js  release
scripts/native/: check  clippy  docs  release  run  tests
scripts/wasm32/: check  clippy  docs  release  run  tests
src/: lib.rs  sys.rs  threadpool.rs  waker.rs
src/js/: worker.js
src/sys/: stdlib.rs  wasm.rs
src/sys/wasm/: channel.rs  static_executor.rs
tests/: test_static_inline.rs
