[package]
name = "some_global_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
logwise = "0.3"
#logwise = {path = "../logwise"}
some_executor = "0.5"
#some_executor = {path = "../some_executor"}
atomic-waker = "1.1.2"



[dev-dependencies]
test_executors = "0.3"
continue = "0.1.0"
# temp
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-channel = "0.5.13"
num_cpus = "1.17.0"



[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features=["Worker","Blob","Url","WorkerOptions","WorkerType","WorkerGlobalScope"]}
js-sys = "0.3"
wasm_thread = "0.3.3"
continue = "0.1.1"
wasm-bindgen-futures = "0.4"
wasm_safe_mutex = { path = "../wasm_safe_mutex"}



[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.45"

[patch.crates-io]
logwise = {path = "../logwise"}
some_executor = {path = "../some_executor"}
test_executors = {path = "../test_executors"}