[package]
name = "some_global_executor"
version = "0.1.0"
edition = "2024"

[dependencies]
logwise = "0.3.0"
some_executor = "0.6.1"
atomic-waker = "1.1.2"

[features]
logwise_internal = []



[dev-dependencies]
test_executors = "0.3.5"
continue = "0.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"



[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
web-sys = {version = "0.3.77", features=["Worker","Blob","Url","WorkerOptions","WorkerType","WorkerGlobalScope"]}
js-sys = "0.3.77"
wasm_thread = "0.3.3"
continue = "0.1.1"
wasm-bindgen-futures = "0.4.50"
wasm_safe_mutex = { version = "0.1.0"}



[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"